--- a/css/cpt-test.css
+++ b/css/cpt-test.css
@@ -698,7 +698,7 @@
 #cpt-intro-screen {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   padding: 1.25rem 0 3rem;
 }
